<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WorkPlaceDataAct"
    android:orientation="vertical"
    >

    <include layout="@layout/header_layout" android:id="@+id/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        android:layout_above="@id/btnQuestions"
        android:layout_below="@id/header"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tvDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/work_destination"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvDestination1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDestination"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="Rio Store"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/tasks_to_do"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13sdp" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/rvWorkPlaceData"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/questionaries1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />
</RelativeLayout>
</layout>
