<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <include layout="@layout/header_layout" android:id="@+id/header"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.DetailAct">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="149dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/_10sdp"
            app:cardUseCompatPadding="true"
            app:cardMaxElevation="@dimen/_10sdp"
            android:layout_margin="@dimen/_5sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/circle_gray" />

                    <TextView
                        android:id="@+id/tvDestination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_toLeftOf="@+id/tvDetail"
                        android:layout_toRightOf="@id/ivProfile"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/work_destination"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tvDestination1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvDestination"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_toRightOf="@id/ivProfile"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="Rio Store"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tvDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/view_details"
                        android:textColor="@color/dark_green"
                        android:textSize="@dimen/_11sdp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/tasks_to_do"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_13sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rvTaskDescription"
                />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnQuestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/questionaries1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>